--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
 <body>
     <div id="knap">
-        <button id="knap_kig_rundt">Figuren kigger rundt</button>
-        <button id="knap_højre">Figuren går til højre</button>
-        <button id="knap_venstre">Figuren går til venstre</button>
-        <button id="knap_dø">Figuren dør</button>
-        <button id="knap_lever">Figuren lever</button>
+        <button id="knap_kig_rundt">Mand kigger rundt</button>
+        <button id="knap_højre">Mand går til højre</button>
+        <button id="knap_venstre">Mand går til venstre</button>
+        <button id="knap_dø">Mand dør</button>
+        <button id="knap_lever">Mand lever</button>
     </div>
 
     <div id="scene">
         <div id="baggrund"></div>
-        <div id="mellemgrund"></div>
-        <div id="kvinde_container" class="kvinde_move">
-            <div id="kvinde_sprite" class="kvinde_gaer"></div>
-        </div>
-        <div id="krukke"></div>
         <div id="mand_container" class="mand_move">
             <div id="mand_sprite" class="mand_gaer">
-
             </div>
+            <div id="mellemgrund"></div>
+
+            <div id="kvinde_container" class="kvinde_move">
+                <div id="kvinde_sprite" class="kvinde_gaer"></div>
+            </div>
+            <div id="krukke"></div>
         </div>
         <div id="forgrund"></div>
 
