--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 
 <body>
     <div id="knap">
-        <button id="knap_kig_rundt">Mand kigger rundt</button>
-        <button id="knap_højre">Mand går til højre</button>
+        <button id="knap_mand_ind">Mand går ind</button>
         <button id="knap_venstre">Mand går til venstre</button>
         <button id="knap_dø">Mand dør</button>
-        <button id="knap_lever">Mand lever</button>
     </div>
 
     <div id="scene">
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
         <div id="krukke"></div>
-<div id="mand_container" class="mand_move">
-    <div id="mand_sprite" class="mand_gaer">
-    </div>
-</div>
+        <div id="mand_container" class="mand_move">
+            <div id="mand_sprite" class="mand_gaer">
+            </div>
+        </div>
 
         <div id="kvinde_container" class="kvinde_move">
             <div id="kvinde_sprite" class="kvinde_gaer"></div>
