--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
         <div id="krukke"></div>
-        <div id="mand_container" class="mand_move">
-            <div id="mand_sprite_1" class="mand_gaer">
+        <div id="mand_container" class="">
+            <div id="mand_sprite_1" class="">
             </div>
-            <div id="mand_sprite_2" class="mand_staer"></div>
+
 
         </div>
-
 
         <div id="kvinde_container" class="kvinde_move">
             <div id="kvinde_sprite" class="kvinde_gaer"></div>
