--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="knap">
-        <button id="dame_click">Venstre</button>
+        <button id="knap">Venstre</button>
     </div>
 
     <div id="scene">
@@ -19,14 +19,13 @@
         <div id="mellemgrund"></div>
         <div id="krukke"></div>
         <div id="mand_container" class="">
-            <div id="mand_sprite_1" class="">
+            <div id="mand_sprite" class="">
             </div>
-
 
         </div>
 
-        <div id="kvinde_container" class="kvinde_move">
-            <div id="kvinde_sprite" class="kvinde_gaer"></div>
+        <div id="kvinde_container" class="">
+            <div id="kvinde_sprite" class=""></div>
         </div>
 
         <div id="forgrund"></div>
