Venstre ben næsten færdig

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div id="knap">
-        <button id="knap">Venstre</button>
+        <button id="knap_venstre">Venstre</button>
+        <button id="knap_højre">Højre</button>
     </div>
 
     <div id="scene">
