--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 </head>
 
 <body>
-    <div id="knap">
-        <button id="knap_venstre">Venstre</button>
-        <button id="knap_højre">Højre</button>
-    </div>
 
     <div id="scene">
         <audio id="vaporwave" src="Sound/vaporwave.mp3"></audio>
@@ -31,11 +27,25 @@
 
         <div id="forgrund"></div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="javascript%20opgave.js"></script>
+        <div id="venstre" class="knap">Venstre</div>
+        <div id="hojre" class="knap">Højre</div>
 
+
+        <div class="spillet">
+            <div class="game coin_1"></div>
+            <div class="game coin_2"></div>
+            <div class="game coin_3"></div>
+            <div class="game coin_4"></div>
+            <div class="game coin_5"></div>
+            <div class="game coin_6"></div>
+            <div class="game coin_7"></div>
+            <div class="game coin_8"></div>
+            <div class="game coin_9"></div>
+        </div>
 
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="javascript%20opgave.js"></script>
 
 </body>
 
